2005-08-10  Tom Tromey  <tromey@redhat.com>

	* lib/split-for-gcj.sh: Use 'while' loop to avoid length limits.

2005-08-10  Andreas Tobler  <toa@pop.agri.ch>

	* native/jni/java-net/gnu_java_net_PlainSocketImpl.c: Include
	target_native_file.h.  PR classpath/22926.

2005-08-10  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTree.java
	(doExpandParents): Took out call to checkExpandParents.
	(checkExpandParents): Helper method not needed. Caused problems since
	fireTreeWillExpand was being called too many times. fireTreeWillExpand is
	called from BasicTreeUI whenever a node is expanded.

2005-08-10  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/PortableInterceptor/Interceptor.java,
        org/omg/PortableInterceptor/InterceptorOperations.java: New files.
        * org/omg/DynamicAny/_DynAnyFactoryStub.java,
        org/omg/DynamicAny/_DynAnyStub.java,
        org/omg/DynamicAny/_DynArrayStub.java,
        org/omg/DynamicAny/_DynEnumStub.java,
        org/omg/DynamicAny/_DynFixedStub.java,
        org/omg/DynamicAny/_DynStructStub.java,
        org/omg/DynamicAny/_DynUnionStub.java,
        org/omg/DynamicAny/_DynValueStub.java,
        org/omg/DynamicAny/_DynSequenceStub.java: Added _opsClass field.

2005-08-10  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java:
	Formatted entire class.

2005-08-10  Lillian Angel  <langel@redhat.com>
	
	* javax/swing/plaf/basic/BasicTreeUI.java
	(mouseClicked): Called fireTreeWillExpand and fireTreeWillCollapse when
	appropriate.
	(keyPressed): Likewise.

2005-08-10  Roman Kennke  <roman@kennke.org>

	* java/awt/Container.java
	(paint): Call visitChildren with lightweightOnly == true.
	(update): Only call paint if we are not in a toplevel container.

2005-08-09  Aaron Luchko  <aluchko@redhat.com>

	* gnu/classpath/jdwp/processor/StackFrameCommandSet.java:
	Implemented the StackFrame CommandSet.

2005-08-09  Anthony Balkissoon  <abalkiss@redhat.com>
